<resources>
    <string name="app_name">it.place.net</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="title_activity_profile_edit">Редактировать профиль</string>

    <string name="navigation_drawer_open">Открыть навигационную панель</string>
    <string name="navigation_drawer_close">Закрыть навигационную панель</string>

    <string name="navigation_item_map">Карта</string>
    <string name="navigation_item_dialog">Диалоги</string>
    <string name="navigation_item_login">Вход</string>
    <string name="navigation_item_logout">Выход</string>

    <string name="action_profile_edit">Редактировать профиль</string>

    <!-- Strings related to login -->
    <string name="image_owl_content_description">Картинка с совой</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_registration">Регистрация</string>
    <string name="prompt_forgot_password">Забыли пароль?</string>
    <string name="action_sign_in_alert">Не все поля заполнены</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_out">Выйти</string>
    <string name="error_invalid_email">Неверный email</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Поле обязательно для заполнения</string>
    <string name="error_sign_in_failed">Ошибка входа</string>
    <string name="success_sign_in">Вы успешно вошли в систему</string>

    <!-- Strings related to profile -->
    <string name="group_title_person">Личные данные</string>
    <string name="group_title_password">Сменить пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_phone">Телефон</string>
    <string name="action_change_photo">Сменить фотографию</string>
    <string name="action_save">Сохранить</string>
    <string name="note_save_done">Данные успешно сохранены</string>
    <string name="error_save_failed">Ошибка при сохранении</string>
    <string name="error_load_failed">Ошибка загрузки данных</string>
    <string name="popup_menu_item_gallery">Галерея</string>
    <string name="popup_menu_item_camera">Камера</string>
    <string name="permission_rationale">Необходимо дать приложению доступ к использованию камеры</string>
    <string name="error_create_temp_file">Не получилось создать временный файл!</string>
    <string name="error_user_not_found">Ошибка! Пользователь не найден</string>

    <!-- Strings related to map -->
    <string name="title_activity_maps">Карта</string>
    <string name="permission_my_location">Необходимо дать приложению доступ к определению местоположения</string>
    <string name="error_my_location">Ошибка определения местоположения пользователя. Разрешите доступ в настройках</string>
    <string name="error_location_settings">Настройки определения местоположения неадекватны и не могут быть исправлены здесь. Исправьте в Настройках</string>
    <string name="my_marker">Мое местоположение</string>
    <string name="was_here">Был(а) здесь %s назад</string>
    <string name="days">%s дн.</string>
    <string name="hours">%s ч.</string>
    <string name="minutes">%s мин.</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="geofence_error">the Geofence service is not available now</string>
    <string name="geofence_transition_entered">сейчас рядом с Вами!</string>
    <string name="geofence_transition_notification_text">Нажмите на уведомление, чтобы вернуться к приложению</string>

    <!-- Strings related to dialogs -->
    <string name="hint_enter_a_message">Cообщение…</string>
    <string name="action_delete">Удалить</string>
    <string name="action_copy">Копировать</string>
    <string name="copied_message">Сообщение скопировано</string>

    <string name="date_header_today">Сегодня</string>
    <string name="date_header_yesterday">Вчера</string>

    <string-array name="view_types_dialog">
        <item name="image">Изображение</item>
        <item name="voice">Голосовое сообщение</item>
    </string-array>

</resources>
