<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="yuyu.itplacenet.LoginActivity">

    <ImageView
        android:id="@+id/image_owl_bg"
        app:srcCompat="@drawable/img"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        app:layout_constraintEnd_toEndOf="@id/login_form"
        app:layout_constraintStart_toStartOf="@id/login_form"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="184dp"
        android:background="@color/colorContrast"
        android:padding="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_owl_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/large_margin"
                style="@style/EditText"
                />

            <EditText
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/large_margin"
                android:nextFocusDown="@id/email_sign_in_button"
                style="@style/EditText"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/large_margin" >

                <Button
                    android:id="@+id/registration_button"
                    android:layout_alignParentStart="true"
                    android:text="@string/prompt_registration"
                    android:nextFocusUp="@id/email_sign_in_button"
                    style="@style/Button.Link.Small"
                    />

                <Button
                    android:id="@+id/forgot_password_button"
                    android:layout_alignParentEnd="true"
                    android:text="@string/prompt_forgot_password"
                    style="@style/Button.Link.Small"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:text="@string/action_sign_in"
                android:nextFocusUp="@id/password"
                android:nextFocusDown="@id/registration_button"
                style="@style/Button.Wide.Green"
                />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_owl_bg"
        layout="@layout/progress_bar"/>

</android.support.constraint.ConstraintLayout>
