<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorContrast"
    tools:context="yuyu.itplacenet.ProfileEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_photo_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_photo_bg_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:alpha="0.75"
                />

            <RelativeLayout
                android:id="@+id/profile_description_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/profile_photo_size"
                app:layout_constraintTop_toTopOf="@+id/profile_photo_bg">

                <com.makeramen.roundedimageview.RoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_photo"
                    android:layout_width="@dimen/profile_photo_size"
                    android:layout_height="@dimen/profile_photo_size"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/no_photo"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="30dip"
                    app:riv_mutate_background="true"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/user_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/extra_large_text_size"
                    tools:text="User Name"
                    />

                <Button
                    android:id="@+id/change_photo_button"
                    android:textColor="@color/colorLight"
                    android:layout_below="@+id/user_name_text"
                    android:layout_centerHorizontal="true"
                    android:text="@string/action_change_photo"
                    style="@style/Button.Link.Small"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/profile_edit_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/profile_description_form"
                android:layout_margin="@dimen/large_margin"
                android:padding="@dimen/large_margin"
                android:orientation="vertical">

                <TextView
                    android:text="@string/group_title_person"
                    android:layout_marginBottom="@dimen/large_margin"
                    style="@style/GroupTitle"
                    />

                <TextView
                    android:text="@string/prompt_name"
                    android:labelFor="@id/user_name"
                    style="@style/Label"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_large_margin">

                    <EditText
                        android:id="@+id/user_name"
                        android:inputType="textPersonName"
                        style="@style/EditText.Large"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/prompt_phone"
                    android:labelFor="@id/user_phone"
                    style="@style/Label"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_large_margin">
                    <EditText
                        android:id="@+id/user_phone"
                        android:inputType="phone"
                        style="@style/EditText.Large"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/prompt_email"
                    android:labelFor="@id/user_email"
                    style="@style/Label"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_large_margin">
                    <EditText
                        android:id="@+id/user_email"
                        android:inputType="textEmailAddress"
                        style="@style/EditText.Large"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/action_save"
                    android:enabled="false"
                    style="@style/Button.Wide"
                    />

            </LinearLayout>

            <include
                android:id="@+id/load_user_data_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                android:layout_below="@+id/profile_description_form"
                android:layout_centerHorizontal="true"
                layout="@layout/progress_bar"
                />

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
